public/assets/css/style.css
/* ... */
.main-header-bar .header-bar-inner .outer-box {
    position: absolute;
    left: 0;
    top: 0;
    width: 100%;
    height: 100%;
    background: rgba(255, 255, 255, 0.2);
    z-index: 5;
}

.main-header-bar .social-links {
    position: absolute;
    left: 25%;
    bottom: 250px;
    width: 100%;
    padding: 0px 0;
    text-align: center;
}
.main-header-bar .social-links li a:hover:hover {
    transform: translateY(-5px);
    box-shadow: 0 4px 10px rgba(240, 89, 40, 0.3);
}

.main-header-bar .social-links li {
    position: relative;
    display: block;
    margin-top: 16px;
    line-height: 38px;
}

.main-header-bar .social-links li a {
    position: relative;
    display: block;
    width: 50px;
    color: white;
    height: 50px;
    text-align: center;
    background: rgba(255, 255, 255, 0.1);
    font-size: 20px;
    line-height: 54px;
    border-radius: 50%;
    -webkit-transition: all 300ms ease;
    -ms-transition: all 300ms ease;
    -o-transition: all 300ms ease;
    -moz-transition: all 300ms ease;
    transition: all 300ms ease;
}

.main-header-bar .social-links li a:hover {
    color: #101010;
    background: #f05928;
    background-color: #f05928;
    color: #ffffff;
    transform: scale(1.1);
}

.main-header-bar .nav-toggler {
    position: absolute;
    left: 0px;
    /* top: 50px; */
    width: 100%;
    padding: 2%;
    display: block;
    padding: 30px 36px;
    background-color: #f05928;
}

.main-header-bar .nav-toggler .toggler-btn {
    position: relative;
    display: block;
    background: none;
    width: 34px;
    height: 20px;
    margin: 0 auto;
    cursor: pointer;
}

/* .main-header-bar .nav-toggler .toggler-btn.active{

} */

.main-header-bar .nav-toggler .toggler-btn .bar {
    position: relative;
    display: block;
    border-radius: 2px;
    border-bottom: 3px solid #ffffff;
    margin-bottom: 5px;
    transition: all 500ms ease;
    -moz-transition: all 500ms ease;
    -webkit-transition: all 500ms ease;
    -ms-transition: all 500ms ease;
    -o-transition: all 500ms ease;
}

.main-header-bar .nav-toggler .toggler-btn .bar:last-child {
    width: 24px;
    margin-bottom: 0px;
}

.main-header-bar .copyright {
    position: absolute;
    left: 32px;
    bottom: 0px;
    width: 160px;
    transform-origin: left top;
    transform: rotate(-90deg);
}

.alt-logo-box {
    position: absolute;
    left: 7%;
    top: 26px;
    /* display: none; */
    /* z-index: 9999; */
    padding: 0px 20px;
    margin: 0 auto;
}

.alt-logo .alt-logo-box {
    display: block;
}

.alt-logo-box img {
    /* width: 192px;
  max-width: none; */
    max-width: 340px;
    height: 73px;
}

.main-nav-outer {
    position: absolute;
    left: 91px;
    top: 0px;
    width: 349px;
    height: 100%;
    max-height: 100%;
    background: none;
    z-index: 2;
    visibility: hidden;
    -ms-transform: translateX(-430px);
    transform: translateX(-430px);
    transition: all 700ms ease;
    -moz-transition: all 700ms ease;
    -webkit-transition: all 700ms ease;
    -ms-transition: all 700ms ease;
    -o-transition: all 700ms ease;
}

.main-nav-outer .nav-closer {
    position: absolute;
    right: -23px;
    top: 90px;
    width: 46px;
    height: 46px;
    opacity: 0;
    visibility: hidden;
    -ms-transform: scale(0);
    transform: scale(0);
    transition: all 700ms ease 0ms;
    -moz-transition: all 700ms ease 0ms;
    -webkit-transition: all 700ms ease 0ms;
    -ms-transition: all 700ms ease 0ms;
    -o-transition: all 700ms ease 0ms;
    cursor: pointer;
    transform: scale(0.25);
    -ms-transform: scale(0.25);
    z-index: 10;
}

.main-nav-outer.now-visible .nav-closer {
    opacity: 1;
    visibility: visible;
    transform: scale(1);
    -ms-transform: scale(1);
    transition: all 500ms ease 700ms;
    -moz-transition: all 500ms ease 700ms;
    -webkit-transition: all 500ms ease 700ms;
    -ms-transition: all 500ms ease 700ms;
    -o-transition: all 500ms ease 700ms;
}

.main-nav-outer.now-visible {
    opacity: 1;
    visibility: visible;

    -ms-transform: translateX(0);
    transform: translateX(0);
}

.main-nav-outer .outer-nav-box {
    position: relative;
    padding: 45px 0px 20px;
    background: none;
    width: 100%;
    height: 550px;
    overflow: hidden;
}

.main-nav-outer .main-nav-box {
    position: relative;
    background: none;
    width: 100%;
    max-height: 100%;
    overflow: auto;
}

.main-nav-outer .scrollbar-thumb,
.main-nav-outer .scrollbar-thumb,
.main-nav-outer .scrollbar-thumb {
    background: rgba(255, 255, 255, 0.4);
}

.main-nav-outer .outer-nav-box .top-bg {
    position: absolute;
    left: 0;
    top: 0;
    width: 100%;
    bottom: 35px;
    background: #15181b;
}

.main-nav-outer .outer-nav-box .bottom-bg {
    position: absolute;
    left: -15px;
    bottom: 0;
    width: 100%;
    height: 35px;
    bottom: 0px;
    background: #15181b;
    transform: skewX(-45deg);
}

.main-nav-outer .main-logo-box {
    position: relative;
    padding: 0px 54px;
    width: 100%;
    text-align: center;
    opacity: 0;
    visibility: hidden;
    -ms-transform: translateY(-150px);
    transform: translateY(-150px);
    transition: all 300ms ease 200ms;
    -moz-transition: all 300ms ease 200ms;
    -webkit-transition: all 300ms ease 200ms;
    -ms-transition: all 300ms ease 200ms;
    -o-transition: all 300ms ease 200ms;
    z-index: 1;
}

.main-nav-outer.now-visible .main-logo-box {
    opacity: 1;
    visibility: visible;
    -ms-transform: translateY(0px);
    transform: translateY(0px);
    -moz-transition: all 700ms ease 400ms;
    -webkit-transition: all 700ms ease 400ms;
    -ms-transition: all 700ms ease 400ms;
    -o-transition: all 700ms ease 400ms;
    transition: all 700ms ease 400ms;
}

.main-nav-outer .main-nav-box .main-nav {
    position: relative;
    display: block;
    padding: 65px 30px 0;
}
/* ... */

